see that file and the SVN log for more historic information.  The
entire history of the project is available through SVN.

----------------------------------------------------------------------
--- 2007-11-XX  Release 7.11.0                                     ---
----------------------------------------------------------------------

* fixed g-dxf bug where incorrect object name is assigned - Bob Parker
* fixed browser-based mged help on Mac OS X - Sean Morrison
* added rest of BRL-CAD's geometry converters for Windows - Bob Parker
* added more missing framebuffer tools to Windows port - Bob Parker
* rtwizard enhancments for ghosting and display - Bob Parker
* mged reports failure if ray-tracer returns non-zero - Sean Morrison
* improved mged corrupt geometry file handling - Sean Morrison
* improved dbconcat object suffix and prefix options - Sean Morrison
* Tcl/Tk updated to 8.5 final from 8.5b1 - Erik Greenwald
* fixed PIX image file creation bug on Windows - Bob Parker
* ported rtwizard to function properly on Windows - Bob Parker
* fixed mged text-editing commands on Windows platform - Bob Parker
* removed duplicate points text-editing ARBs in mged - John Anderson
* improved mged ted line-ending support using wordpad - Bob Parker
* fixed g_diff bug where some differences were missed - John Anderson
* fixed bug evaluating metaball normals - Erik Greenwald, Ed Davisson
* improved metaball primitive rendering - Erik Greenwald
* fixed bug in mged rcc-cap command when using 't' option - Bob Parker
* mged classic mode now works on Windows platform - Bob Parker
* fixed Windows-specific raytrace framebuffer delay - Bob Parker
* new tracker tool for extracting NEWS tracker data - Sean Morrison
* converted source repository from CVS to Subversion - Sean Morrison
* new 'dir2ae' mged command for getting az/el from dir - Sean Morrison
* new 'ae2dir' mged command for getting dir from az/el - Bob Parker
* fixed empty name crash when using mged 'lt' command  - Sean Morrison